# Mantis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  justfile
benchmarks/cpp/: CMakeLists.txt
benchmarks/cpp/src/: harness.hpp  main.cpp  message.hpp  rdtsc.hpp  stats.hpp
benchmarks/cpp/src/queues/: drogalis.hpp  rigtorp.hpp
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: harness.rs  main.rs  message.rs  raw_bench.rs  rdtsc.rs  stats.rs
benchmarks/rust/src/queues/: mantis_copy.rs  mantis_inline.rs  mod.rs  rtrb_queue.rs
crates/bench/: BENCHMARKING.md  Cargo.toml  README.md  build.rs
crates/bench/benches/: decode.rs  fixed.rs  market_state.rs  seqlock.rs  spsc.rs  spsc_contenders.rs  spsc_mantis.rs
crates/bench/cpp/: drogalis_ffi.cpp  rigtorp_ffi.cpp  seqlock_bench_contender.cpp
crates/bench/src/: bench_runner.rs  counters.rs  drogalis_ffi.rs  lib.rs  measurement.rs  messages.rs  report.rs  rigtorp_ffi.rs  seqlock_ffi.rs  workloads.rs
crates/bench/src/counters/: instant.rs  kperf.rs  mod.rs  pmu.rs  rdtsc.rs
crates/binance/: Cargo.toml  README.md
crates/binance/src/: decoder.rs  lib.rs  schema.rs  spawn.rs
crates/binance/tests/: e2e_decode.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: body.rs  control.rs  event.rs  execution.rs  flags.rs  header.rs  lib.rs  market.rs
crates/fixed/: Cargo.toml  README.md
crates/fixed/fuzz/: Cargo.toml
crates/fixed/fuzz/fuzz_targets/: display_roundtrip.rs  parse.rs
crates/fixed/src/: arithmetic.rs  convert.rs  fixed_i64.rs  fmt.rs  lib.rs  mul_div.rs  parse.rs
crates/layout/: Cargo.toml  README.md
crates/layout/src/: lib.rs  main.rs
crates/market-state/: Cargo.toml
crates/market-state/src/: engine.rs  lib.rs  state.rs  strategy.rs
crates/market-state/src/book/: array_book.rs  mod.rs
crates/market-state/tests/: multi_instrument.rs
crates/platform/: Cargo.toml  README.md
crates/platform/src/: bithacks.rs  config.rs  cpudetect.rs  lib.rs  numerics.rs  pad.rs
crates/platform/src/constant_time/: ct_division.rs  ct_routines.rs  ct_types.rs  mod.rs  multiplexers.rs
crates/platform/src/intrinsics/: addcarry_subborrow.rs  compiler_hints.rs  copy_dispatch.rs  copy_policy.rs  extended_prec.rs  mod.rs
crates/platform/src/isa_arm64/: assembler.rs  counters.rs  mod.rs  simd.rs
crates/platform/src/isa_x86/: assembler.rs  cpudetect.rs  mod.rs  rdtsc.rs  simd.rs
crates/platform/src/metering/: hw_counters.rs  instant.rs  kperf_pmu.rs  mod.rs  perf_group.rs
crates/pm-live/: Cargo.toml
crates/pm-live/src/: clob.rs  instance.rs  lib.rs  order_manager.rs  user_ws.rs
crates/pm-market/: Cargo.toml
crates/pm-market/src/: events.rs  l2_orderbook.rs  lib.rs  manager.rs  orderbook.rs  ws_polymarket.rs
crates/polymarket/: Cargo.toml  README.md
crates/polymarket/src/: lib.rs
crates/polymarket/src/market/: decoder.rs  mod.rs  schema.rs  spawn.rs
crates/polymarket/tests/: e2e_decode.rs
crates/queue/: Cargo.toml  README.md
crates/queue/examples/: asm_shim.rs
crates/queue/src/: engine.rs  handle.rs  lib.rs  presets.rs  storage.rs
crates/queue/src/copy_ring/: engine.rs  handle.rs  mod.rs
crates/queue/src/raw/: mod.rs  slot.rs
crates/queue/tests/: spsc_basic.rs  spsc_copy_basic.rs  spsc_stress.rs
crates/registry/: Cargo.toml  README.md
crates/registry/src/: bindings.rs  error.rs  lib.rs  record.rs  types.rs
crates/seqlock/: Cargo.toml
crates/seqlock/src/: lib.rs
crates/seqlock/src/raw/: mod.rs  seqlock.rs
crates/seqlock/tests/: torn_read.rs
crates/strategy/: Cargo.toml  README.md
crates/strategy/src/: context.rs  exposure.rs  intent.rs  lib.rs  order_tracker.rs  position.rs  queue.rs  risk.rs  traits.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: feed.rs  lib.rs  monitor.rs  timer.rs  tuning.rs  ws.rs
crates/transport/src/binance/: mod.rs  reference.rs
crates/transport/src/polymarket/: mod.rs  (+1 more)
crates/transport/tests/: feed_thread.rs  live_feeds.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: btc_qty.rs  instrument.rs  instrument_id.rs  lib.rs  lots.rs  order_id.rs  probability.rs  side.rs  signed_lots.rs  source_id.rs  ticks.rs  timestamp.rs  usdc.rs
crates/verify/: Cargo.toml  README.md
crates/verify/src/: decoder_props.rs  fixed_props.rs  lib.rs  market_state_props.rs  seqlock_proofs.rs  seqlock_props.rs  spsc_diff.rs  spsc_proofs.rs  spsc_props.rs
polymarket/: Cargo.toml
polymarket-bot-poc/src/ftxui/: CMakeLists.txt  ftxui_dashboard.cpp  ftxui_dashboard.h  snapshot_types.h
polymarket/config/: backtest-3mo-eth.toml  backtest-3mo.toml  default.toml  live-test.toml  paper-aggressive.toml  pbt-15m-aggressive.toml  pbt-15m-only.toml  pbt-5m-only.toml  pbt-btc-min5.toml  pbt-sol-min15.toml  production.toml  test-D-cheap-entry.toml  test-week.toml
polymarket/crates/pm-bookkeeper/: Cargo.toml
polymarket/crates/pm-executor/: Cargo.toml
polymarket/crates/pm-live/: Cargo.toml
polymarket/crates/pm-market/: Cargo.toml
polymarket/crates/pm-oracle/: Cargo.toml
polymarket/crates/pm-risk/: Cargo.toml
polymarket/crates/pm-signal/: Cargo.toml
polymarket/crates/pm-types/: Cargo.toml
polymarket/docs/: PROGRESS.md
polymarket/docs/research/: 2026-04-02-btc-5m-15m-report.md  2026-04-02-scallops-btc-15m-deep-analysis.md  falcon-api-reference.md
polymarket/logs/: equity.csv  summary.json  trades.csv
polymarket/logs/pbt/: equity.csv  summary.json  trades.csv
polymarket/scripts/: btc_15m_bot.py  btc_trader_report.py  check_bot_status.sh  deep_dive_4.py  edge_analysis.py  extra_windows.json  fetch_more_windows.py  market_flow_analysis.py  multi_config_simulation.py  multi_strategy_bot.py  order_type_analysis.py  paper_executor_v2.py  reconstruct_flow.py  scenario_analysis.py  strategy_simulation.py
polymarket/src/: backtest.rs  calibrate.rs  download.rs  main.rs  paper.rs  pbt_backtest.rs  pbt_download.rs
polymarket/tests/: integration_pipeline.rs  test_btc_15m_bot.py
(+203 files in other folders)
