[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/mantis-sdk/mantis"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.dependencies]
mantis-core = { path = "crates/core", version = "0.1.0" }
mantis-types = { path = "crates/types", version = "0.1.0" }
mantis-queue = { path = "crates/queue", version = "0.1.0" }
mantis-bench = { path = "crates/bench", version = "0.1.0" }
mantis-layout = { path = "crates/layout", version = "0.1.0" }
mantis-verify = { path = "crates/verify", version = "0.1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
bolero = "0.11"
libc = "0.2.169"
