[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Lowered to 1.93 to match Kani 0.67.0's bundled rustc.
# Uses edition 2024 (stable since 1.85) + cold_path (nightly feature).
rust-version = "1.93.0"
license = "Apache-2.0"
repository = "https://github.com/Milerius/Mantis"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Bench profile: full optimization for accurate measurements
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[workspace.dependencies]
mantis-core = { path = "crates/core", version = "0.1.0" }
mantis-types = { path = "crates/types", version = "0.1.0" }
mantis-queue = { path = "crates/queue", version = "0.1.0" }
mantis-bench = { path = "crates/bench", version = "0.1.0" }
mantis-layout = { path = "crates/layout", version = "0.1.0" }
mantis-verify = { path = "crates/verify", version = "0.1.0" }
mantis-platform = { path = "crates/platform", version = "0.1.0" }
mantis-fixed = { path = "crates/fixed", version = "0.1.0" }
mantis-events = { path = "crates/events", version = "0.1.0" }
mantis-seqlock = { path = "crates/seqlock", version = "0.1.0" }
mantis-transport = { path = "crates/transport", version = "0.1.0" }
mantis-registry = { path = "crates/registry", version = "0.1.0" }
mantis-market-state = { path = "crates/market-state", version = "0.1.0" }
mantis-strategy = { path = "crates/strategy", version = "0.1.0" }
mantis-binance = { path = "crates/binance", version = "0.1.0" }
mantis-polymarket = { path = "crates/polymarket", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
tracing = "0.1"
cfg-if = "1"
libm = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
bolero = "0.11"
libc = "0.2.169"
perf-event2 = "0.7"
fast-float2 = "0.2"
lexical-core = "1"
