[package]
name = "mantis-spsc-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mantis-queue = { path = "../../crates/queue", features = ["alloc"] }
mantis-platform = { path = "../../crates/platform" }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtrb = "0.3"
