[package]
name = "mantis-binance"
description = "Binance venue decoder for the Mantis SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sonic-rs"]
sonic-rs = ["dep:sonic-rs"]
simd-json = ["dep:simd-json"]

[dependencies]
mantis-types = { workspace = true, features = ["std"] }
mantis-events = { workspace = true }
mantis-fixed = { workspace = true }
mantis-transport = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true, optional = true }
sonic-rs = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
mantis-queue = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
