[package]
name = "mantis-fixed"
description = "Compile-time-scaled fixed-point decimal arithmetic for the Mantis SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
std = []

[dependencies]
mantis-platform = { workspace = true }

[lints]
workspace = true
