[package]
name = "mantis-layout"
description = "Struct layout and cache-line analysis tooling for the Mantis SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mantis-core = { workspace = true }
mantis-types = { workspace = true }
mantis-queue = { workspace = true }

[lints]
workspace = true
