[package]
name = "mantis-polymarket"
description = "Polymarket venue decoder and client SDK for the Mantis SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["simd-json"]
simd-json = ["dep:simd-json"]

[dependencies]
mantis-types = { workspace = true, features = ["std"] }
mantis-events = { workspace = true }
mantis-fixed = { workspace = true }
mantis-registry = { workspace = true }
mantis-transport = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
mantis-queue = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
