[package]
name = "mantis-queue"
description = "Lock-free queue primitives for the Mantis low-latency financial SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
std = ["alloc", "mantis-platform/std"]
alloc = []
asm = ["mantis-platform/asm"]
nightly = ["mantis-platform/nightly"]
prefetch = ["mantis-platform/prefetch"]

[dependencies]
mantis-core = { workspace = true }
mantis-platform = { workspace = true }
mantis-types = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true
