[package]
name = "pm-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pm-types = { workspace = true, features = ["std"] }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
