[package]
name = "pm-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
std = ["serde", "serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
toml = { workspace = true }
proptest = "1"

[lints]
workspace = true
